mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_break_outside_loop.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_break_outside_loop.mux`
error: Cannot use 'break' outside of a loop
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_break_outside_loop.mux:2:6
   |
 2 | break
   |      ^
